--- a/classno02/readme
+++ b/classno02/readme
@@ -1,8 +1,15 @@
-1 learn about identations.....
+1 learn about Indentations.....
 2 loops
 3 for in loop
 4 while loop
 5 list comprehensions
 6 function
 7 lambda functions
-8 decorators
+8 decorators 
+
+Class no 03
+Topics:
+1 Random
+2 File reading , writing
+3 Chunks
+4 CSV reading , writing
